# bifrost-core

./: Cargo.toml  LICENSE  README.md
files/: bifrost.icns  root.key
src/: context.rs  error.rs  http_interceptor.rs  https_interceptor.rs  main.rs  store.rs  tunnel_interceptor.rs  websocket.rs  websocket_interceptor.rs
src/plugin/: bifrost_server.rs  https_interceptor.rs  mod.rs  net_storage.rs  traffic_stats.rs
