[package]
name = "bifrost-core"
version = "0.1.0"
edition = "2021"
authors = ["Bifrost <liuhua.jia@bytedance.com>"]
description = "Bifrost Core"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
hyper = { version = "1.0", features = ["full"] }
hyper-tls = "0.6.0"
async-trait = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
bytes = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
serde_json = "1.0"
rustls = "0.23.18"
rcgen = "0.13.1"
hyper-rustls = { version = "0.27.3", features = ["http2"] }
tokio-rustls = "0.26.0"
log = "0.4"
env_logger = "0.11.5"
time = "0.3"
thiserror = "2.0.3"
